--- a/nine/app/src/main/res/values/colors.xml
+++ b/nine/app/src/main/res/values/colors.xml
@@ -8,5 +8,17 @@
     <color name="white">#ffffff</color>
     <color name="grey">#cccccc</color>
     <color name="red">#ff0000</color>
+    <color name="grey2">#888888</color>
     <color name="orange_light">#ffffdd</color>
+    <color name="transparent">#00000000</color>
+    <color name="blue">#0099ff</color>
+    <color name="green">#00ff99</color>
+
+    <color name="orange">#F9CC12</color>
+    <color name="blue_light">#aaaaff</color>
+    <color name="blue_dark">#1983d1</color>
+    <color name="blue_black">#1673b8</color>
+
+    <color name="tab_text_selected">#0084e8</color>
+    <color name="tab_text_normal">#7597b3</color>
 </resources>
