第十次作业补充

--- a/ten/app/src/main/res/layout/activity_toolbar.xml
+++ b/ten/app/src/main/res/layout/activity_toolbar.xml
@@ -22,11 +22,12 @@
         android:id="@+id/tv_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="该页面演示工具栏功能"
+        android:text="该页面演示工具栏功能，和搜索功能"
         android:textColor="@color/black"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tl_head" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
